# pypika

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  install_hooks.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: black.yml  ci.yml  pythonpackage.yml  release.yml  typechecking.yml
docs/: 1_installation.rst  2_getting_started.rst  2_handbook.rst  2_tutorial.rst  3_advanced.rst  3_reference.rst  4_extending.rst  4_reference.rst  5_reference.rst  Makefile  README.rst  conf.py  index.rst
docs/api/: modules.rst  pypika.analytics.rst  pypika.dialects.rst  pypika.enums.rst  pypika.functions.rst  pypika.pseudocolumns.rst  pypika.queries.rst  pypika.rst  pypika.terms.rst  pypika.test.rst  pypika.test.test_criterions.rst  pypika.test.test_deletes.rst  pypika.test.test_functions.rst  pypika.test.test_inserts.rst  pypika.test.test_joins.rst  pypika.test.test_selects.rst  pypika.test.test_updates.rst  pypika.tests.rst  pypika.tests.test_criterions.rst  pypika.tests.test_deletes.rst  pypika.tests.test_functions.rst  pypika.tests.test_groupby_modifiers.rst  pypika.tests.test_inserts.rst  pypika.tests.test_joins.rst  pypika.tests.test_selects.rst  pypika.tests.test_updates.rst  pyqb.enums.rst  pyqb.queries.rst  pyqb.rst  pyqb.utils.rst  test.rst  test.test_criterions.rst  test.test_updates.rst
docs/source/: 1_installation.rst  2_getting_started.rst  3_reference.rst  conf.py  index.rst  modules.rst
hooks/: prepare-commit-msg
pypika/: __init__.py  analytics.py  dialects.py  enums.py  functions.py  pivot.py  pseudocolumns.py  queries.py  terms.py  utils.py
pypika/clickhouse/: array.py  condition.py  dates_and_times.py  nullable_arg.py  search_string.py  type_conversion.py
pypika/test/: test_functions.py
pypika/tests/: __init__.py  test_aggregate.py  test_analytic_queries.py  test_anti_inject.py  test_create.py  test_criterions.py  test_custom_functions.py  test_data_types.py  test_date_math.py  test_deletes.py  test_drop.py  test_formats.py  test_functions.py  test_groupby_modifiers.py  test_immutability.py  test_inserts.py  test_internals.py  test_joins.py  test_negation.py  test_parameter.py  test_pivot.py  test_pseudocolumns.py  test_psuedocolumns.py  test_query.py  test_selects.py  test_table_class.py  test_tables.py  test_terms.py  test_tuples.py  (+3 more)
pyqb/: __init__.py  enums.py  queries.py  terms.py  utils.py
test/: test_criterions.py  test_functions.py  test_inserts.py  test_joins.py  test_selects.py
tests/: inject_test.py
(+27 files in other folders)
